--- a/README
+++ b/README
@@ -1,2 +1,6 @@
 
 It's a simple implementation of a WebDAV server designed for App Engine. More instructions on how to use this yourself to follow.
+
+Limitations: Right now it only supports files that are less than 1MB. This is due to limitations of the App Engine Datastore. Well, more specifically, limitations of handling large PUT requests.
+
+It's possible for it to support files up to 5MB, so that's on the list.
